tests/test_assets/semantic/invalid/casts/compile_time_initializer_range.cog
test::() -> void {
    value: u8 = cast(u8, 256);
}